# faterium-node

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/docker/: Dockerfile
.github/workflows/: check.yml  docker.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs
pallets/faterium-polls/: Cargo.toml  README.md
pallets/faterium-polls/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/faterium-polls/src/tests/: mod.rs  voting.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: mod.rs  pallet_scheduler.rs
scripts/: docker_run.sh
